// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select tests is a basic snapshot 1`] = `
<div
  class="w-full  "
  data-testid="test-select"
  id="test-select"
  name="test-select"
>
  <label
    class="block mb-1 "
    id=":ra:-label"
  >
    test-select
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":ra:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":ra:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      Select an option
    </button>
    <ul
      aria-labelledby=":ra:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":ra:-listbox"
      role="listbox"
      style="max-height: 300px; min-height: 130px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Dog"
        data-value="dog"
        id=":ra:-list-option-Dog"
        role="option"
        tabindex="-1"
      >
        Dog
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Cat"
        data-value="cat"
        id=":ra:-list-option-Cat"
        role="option"
        tabindex="-1"
      >
        Cat
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Lion"
        data-value="lion"
        id=":ra:-list-option-Lion"
        role="option"
        tabindex="-1"
      >
        Lion
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Tiger"
        data-value="tiger"
        id=":ra:-list-option-Tiger"
        role="option"
        tabindex="-1"
      >
        Tiger
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Elephant"
        data-value="elephant"
        id=":ra:-list-option-Elephant"
        role="option"
        tabindex="-1"
      >
        Elephant
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Giraffe"
        data-value="giraffe"
        id=":ra:-list-option-Giraffe"
        role="option"
        tabindex="-1"
      >
        Giraffe
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Zebra"
        data-value="zebra"
        id=":ra:-list-option-Zebra"
        role="option"
        tabindex="-1"
      >
        Zebra
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Penguin"
        data-value="penguin"
        id=":ra:-list-option-Penguin"
        role="option"
        tabindex="-1"
      >
        Penguin
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Panda"
        data-value="panda"
        id=":ra:-list-option-Panda"
        role="option"
        tabindex="-1"
      >
        Panda
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Koala"
        data-value="koala"
        id=":ra:-list-option-Koala"
        role="option"
        tabindex="-1"
      >
        Koala
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select tests is a snapshot with IsInvalid set to true 1`] = `
<div
  class="w-full  "
  data-testid="test-select"
  id="test-select"
  name="test-select"
>
  <label
    class="block mb-1 "
    id=":rg:-label"
  >
    test-select
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":rg:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-invalid="true"
      aria-labelledby=":rg:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate border-red-600 dark:border-red-500 "
      role="combobox"
    >
      Select an option
    </button>
    <ul
      aria-labelledby=":rg:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":rg:-listbox"
      role="listbox"
      style="max-height: 300px; min-height: 130px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Dog"
        data-value="dog"
        id=":rg:-list-option-Dog"
        role="option"
        tabindex="-1"
      >
        Dog
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Cat"
        data-value="cat"
        id=":rg:-list-option-Cat"
        role="option"
        tabindex="-1"
      >
        Cat
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Lion"
        data-value="lion"
        id=":rg:-list-option-Lion"
        role="option"
        tabindex="-1"
      >
        Lion
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Tiger"
        data-value="tiger"
        id=":rg:-list-option-Tiger"
        role="option"
        tabindex="-1"
      >
        Tiger
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Elephant"
        data-value="elephant"
        id=":rg:-list-option-Elephant"
        role="option"
        tabindex="-1"
      >
        Elephant
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Giraffe"
        data-value="giraffe"
        id=":rg:-list-option-Giraffe"
        role="option"
        tabindex="-1"
      >
        Giraffe
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Zebra"
        data-value="zebra"
        id=":rg:-list-option-Zebra"
        role="option"
        tabindex="-1"
      >
        Zebra
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Penguin"
        data-value="penguin"
        id=":rg:-list-option-Penguin"
        role="option"
        tabindex="-1"
      >
        Penguin
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Panda"
        data-value="panda"
        id=":rg:-list-option-Panda"
        role="option"
        tabindex="-1"
      >
        Panda
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Koala"
        data-value="koala"
        id=":rg:-list-option-Koala"
        role="option"
        tabindex="-1"
      >
        Koala
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select tests is a snapshot with an error 1`] = `
<div
  class="w-full  "
  data-testid="test-select"
  id="test-select"
  name="test-select"
>
  <label
    class="block mb-1 "
    id=":rc:-label"
  >
    test-select
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":rc:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":rc:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      Select an option
    </button>
    <ul
      aria-labelledby=":rc:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":rc:-listbox"
      role="listbox"
      style="max-height: 300px; min-height: 130px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Dog"
        data-value="dog"
        id=":rc:-list-option-Dog"
        role="option"
        tabindex="-1"
      >
        Dog
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Cat"
        data-value="cat"
        id=":rc:-list-option-Cat"
        role="option"
        tabindex="-1"
      >
        Cat
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Lion"
        data-value="lion"
        id=":rc:-list-option-Lion"
        role="option"
        tabindex="-1"
      >
        Lion
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Tiger"
        data-value="tiger"
        id=":rc:-list-option-Tiger"
        role="option"
        tabindex="-1"
      >
        Tiger
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Elephant"
        data-value="elephant"
        id=":rc:-list-option-Elephant"
        role="option"
        tabindex="-1"
      >
        Elephant
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Giraffe"
        data-value="giraffe"
        id=":rc:-list-option-Giraffe"
        role="option"
        tabindex="-1"
      >
        Giraffe
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Zebra"
        data-value="zebra"
        id=":rc:-list-option-Zebra"
        role="option"
        tabindex="-1"
      >
        Zebra
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Penguin"
        data-value="penguin"
        id=":rc:-list-option-Penguin"
        role="option"
        tabindex="-1"
      >
        Penguin
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Panda"
        data-value="panda"
        id=":rc:-list-option-Panda"
        role="option"
        tabindex="-1"
      >
        Panda
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Koala"
        data-value="koala"
        id=":rc:-list-option-Koala"
        role="option"
        tabindex="-1"
      >
        Koala
      </li>
    </ul>
  </div>
  <p
    class="flex items-center text-75 transition-colors duration-150 text-red-700 dark:text-red-400 mt-1"
    id="test-select-error-message"
    role="alert"
  >
    <span
      aria-hidden="true"
      class="mr-1 w-6 h-6 transition-colors duration-150"
    >
      <svg
        class="fill-current transition-colors duration-150"
        viewBox="0 0 20 20"
      >
        <use
          href="/assets/icons/error.svg#error"
        />
      </svg>
    </span>
    test error
  </p>
</div>
`;

exports[`Select tests is a snapshot with isDisabled set to true 1`] = `
<div
  class="w-full  opacity-disabled cursor-not-allowed"
  data-testid="test-select"
  id="test-select"
  name="test-select"
>
  <label
    class="block mb-1 "
    id=":rf:-label"
  >
    test-select
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":rf:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":rf:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 cursor-not-allowed"
      disabled=""
      role="combobox"
    >
      Select an option
    </button>
    <ul
      aria-labelledby=":rf:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":rf:-listbox"
      role="listbox"
      style="max-height: 300px; min-height: 130px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Dog"
        data-value="dog"
        id=":rf:-list-option-Dog"
        role="option"
        tabindex="-1"
      >
        Dog
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Cat"
        data-value="cat"
        id=":rf:-list-option-Cat"
        role="option"
        tabindex="-1"
      >
        Cat
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Lion"
        data-value="lion"
        id=":rf:-list-option-Lion"
        role="option"
        tabindex="-1"
      >
        Lion
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Tiger"
        data-value="tiger"
        id=":rf:-list-option-Tiger"
        role="option"
        tabindex="-1"
      >
        Tiger
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Elephant"
        data-value="elephant"
        id=":rf:-list-option-Elephant"
        role="option"
        tabindex="-1"
      >
        Elephant
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Giraffe"
        data-value="giraffe"
        id=":rf:-list-option-Giraffe"
        role="option"
        tabindex="-1"
      >
        Giraffe
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Zebra"
        data-value="zebra"
        id=":rf:-list-option-Zebra"
        role="option"
        tabindex="-1"
      >
        Zebra
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Penguin"
        data-value="penguin"
        id=":rf:-list-option-Penguin"
        role="option"
        tabindex="-1"
      >
        Penguin
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Panda"
        data-value="panda"
        id=":rf:-list-option-Panda"
        role="option"
        tabindex="-1"
      >
        Panda
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Koala"
        data-value="koala"
        id=":rf:-list-option-Koala"
        role="option"
        tabindex="-1"
      >
        Koala
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select tests is a snapshot with isRequired set to true 1`] = `
<div
  class="w-full  "
  data-testid="test-select"
  id="test-select"
  name="test-select"
>
  <label
    class="block mb-1 "
    id=":re:-label"
  >
    test-select
    <span
      aria-hidden="true"
      class="pl-0.5 text-red-800 dark:text-red-300 transition-colors duration-150"
    >
      *
    </span>
  </label>
  <div
    aria-required="true"
    class="relative"
  >
    <button
      aria-controls=":re:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":re:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      Select an option
    </button>
    <ul
      aria-labelledby=":re:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":re:-listbox"
      role="listbox"
      style="max-height: 300px; min-height: 130px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Dog"
        data-value="dog"
        id=":re:-list-option-Dog"
        role="option"
        tabindex="-1"
      >
        Dog
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Cat"
        data-value="cat"
        id=":re:-list-option-Cat"
        role="option"
        tabindex="-1"
      >
        Cat
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Lion"
        data-value="lion"
        id=":re:-list-option-Lion"
        role="option"
        tabindex="-1"
      >
        Lion
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Tiger"
        data-value="tiger"
        id=":re:-list-option-Tiger"
        role="option"
        tabindex="-1"
      >
        Tiger
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Elephant"
        data-value="elephant"
        id=":re:-list-option-Elephant"
        role="option"
        tabindex="-1"
      >
        Elephant
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Giraffe"
        data-value="giraffe"
        id=":re:-list-option-Giraffe"
        role="option"
        tabindex="-1"
      >
        Giraffe
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Zebra"
        data-value="zebra"
        id=":re:-list-option-Zebra"
        role="option"
        tabindex="-1"
      >
        Zebra
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Penguin"
        data-value="penguin"
        id=":re:-list-option-Penguin"
        role="option"
        tabindex="-1"
      >
        Penguin
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Panda"
        data-value="panda"
        id=":re:-list-option-Panda"
        role="option"
        tabindex="-1"
      >
        Panda
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Koala"
        data-value="koala"
        id=":re:-list-option-Koala"
        role="option"
        tabindex="-1"
      >
        Koala
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select tests is a snapshot with labelHidden set to true 1`] = `
<div
  class="w-full  "
  data-testid="test-select"
  id="test-select"
  name="test-select"
>
  <label
    class="block mb-1 sr-only"
    id=":rd:-label"
  >
    test-select
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":rd:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":rd:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      Select an option
    </button>
    <ul
      aria-labelledby=":rd:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":rd:-listbox"
      role="listbox"
      style="max-height: 300px; min-height: 130px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Dog"
        data-value="dog"
        id=":rd:-list-option-Dog"
        role="option"
        tabindex="-1"
      >
        Dog
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Cat"
        data-value="cat"
        id=":rd:-list-option-Cat"
        role="option"
        tabindex="-1"
      >
        Cat
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Lion"
        data-value="lion"
        id=":rd:-list-option-Lion"
        role="option"
        tabindex="-1"
      >
        Lion
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Tiger"
        data-value="tiger"
        id=":rd:-list-option-Tiger"
        role="option"
        tabindex="-1"
      >
        Tiger
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Elephant"
        data-value="elephant"
        id=":rd:-list-option-Elephant"
        role="option"
        tabindex="-1"
      >
        Elephant
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Giraffe"
        data-value="giraffe"
        id=":rd:-list-option-Giraffe"
        role="option"
        tabindex="-1"
      >
        Giraffe
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Zebra"
        data-value="zebra"
        id=":rd:-list-option-Zebra"
        role="option"
        tabindex="-1"
      >
        Zebra
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Penguin"
        data-value="penguin"
        id=":rd:-list-option-Penguin"
        role="option"
        tabindex="-1"
      >
        Penguin
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Panda"
        data-value="panda"
        id=":rd:-list-option-Panda"
        role="option"
        tabindex="-1"
      >
        Panda
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Koala"
        data-value="koala"
        id=":rd:-list-option-Koala"
        role="option"
        tabindex="-1"
      >
        Koala
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select tests is a snapshot with placeholder 1`] = `
<div
  class="w-full  "
  data-testid="test-select"
  id="test-select"
  name="test-select"
>
  <label
    class="block mb-1 "
    id=":rb:-label"
  >
    test-select
  </label>
  <div
    class="relative"
  >
    <button
      aria-controls=":rb:-listbox"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby=":rb:-label"
      class="w-full text-left rounded-1 border-2  px-[0.375rem] py-[0.125rem] min-h-[2.5rem] text-100 text-neutral-700 dark:text-dark-neutral-700 bg-neutral-0 dark:bg-dark-neutral-200 enabled:hover:bg-neutral-100 dark:enabled:hover:bg-dark-neutral-250 focus:border-blue-500 dark:focus:border-blue-300 transition-colors duration-150 leading-2 truncate  border-neutral-300 dark:border-dark-neutral-350 enabled:hover:border-neutral-400 dark:enabled:hover:border-dark-neutral-500 "
      role="combobox"
    >
      test placeholder
    </button>
    <ul
      aria-labelledby=":rb:-label"
      class="w-full absolute z-300 mt-2 rounded-1 border-2 border-neutral-300 dark:border-dark-neutral-350 shadow-md bg-neutral-0 dark:bg-dark-neutral-250 overflow-y-auto transition-colors duration-150 hidden"
      id=":rb:-listbox"
      role="listbox"
      style="max-height: 300px; min-height: 130px;"
    >
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Dog"
        data-value="dog"
        id=":rb:-list-option-Dog"
        role="option"
        tabindex="-1"
      >
        Dog
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Cat"
        data-value="cat"
        id=":rb:-list-option-Cat"
        role="option"
        tabindex="-1"
      >
        Cat
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Lion"
        data-value="lion"
        id=":rb:-list-option-Lion"
        role="option"
        tabindex="-1"
      >
        Lion
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Tiger"
        data-value="tiger"
        id=":rb:-list-option-Tiger"
        role="option"
        tabindex="-1"
      >
        Tiger
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Elephant"
        data-value="elephant"
        id=":rb:-list-option-Elephant"
        role="option"
        tabindex="-1"
      >
        Elephant
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Giraffe"
        data-value="giraffe"
        id=":rb:-list-option-Giraffe"
        role="option"
        tabindex="-1"
      >
        Giraffe
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Zebra"
        data-value="zebra"
        id=":rb:-list-option-Zebra"
        role="option"
        tabindex="-1"
      >
        Zebra
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Penguin"
        data-value="penguin"
        id=":rb:-list-option-Penguin"
        role="option"
        tabindex="-1"
      >
        Penguin
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Panda"
        data-value="panda"
        id=":rb:-list-option-Panda"
        role="option"
        tabindex="-1"
      >
        Panda
      </li>
      <li
        aria-selected="false"
        class="outline-none break-words px-[0.625rem] py-[0.375rem] text-100 leading-2 border-neutral-300 dark:border-dark-neutral-400 border-b-1 last:border-none transition-colors duration-150 select-none relative before:w-[0.125rem] before:h-full before:absolute before:left-0 before:top-0 before:transition-colors before:duration-150   bg-neutral-0 dark:bg-dark-neutral-250 text-neutral-800 dark:text-dark-neutral-800 "
        data-label="Koala"
        data-value="koala"
        id=":rb:-list-option-Koala"
        role="option"
        tabindex="-1"
      >
        Koala
      </li>
    </ul>
  </div>
</div>
`;
